# libmimedir

./: COPYING  ChangeLog  Makefile  Makefile.am  Makefile.in  README  add.c  config.h.in  configure  configure.ac  configure.in  count.c  del.c  dirlex.c  dirlex.l  dirsynt.c  dirsynt.h  dirsynt.y  dup.c  free.c  get.c  intern.h  libmimedir.h  memmem.c  parse.c  test.c  test.file  test.file.bad
.pc/01_makefile_in.diff/: Makefile.in
debian/: changelog  control  copyright  libmimedir-dev.install  libmimedir0.lintian-overrides  not-installed  rules  watch
debian/patches/: 01_makefile_in.diff  03_bison38_compat.diff  bookworm-port  series
debian/source/: options
